--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http_parser: ^4.0.2
   jwt_decoder: ^2.0.1
   get_it: ^7.6.7
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
