--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   get_it: ^7.6.7
   cached_network_image: ^3.3.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
